--- a/estilo.css
+++ b/estilo.css
@@ -11,7 +11,8 @@
 }
 
 body {
-    background-color: rgb(228, 190, 223);
+    background-color: rgb(134, 212, 199);
+    color: rgb(15, 80, 121);
     font-family: "Audiowide", sans-serif;
 }
 
